# transfer

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: args.rs  main.rs  receive.rs  send.rs  tcp.rs
