[profile.release]
opt-level = 'z'
lto = true

[package]
edition = "2021"
name = "transfer"
version = "0.0.1"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dialoguer = "0.11.0"
generic-array = "0.14.7"
hkdf = "0.12.3"
indicatif = "0.17.7"
local-ip-address = "0.5.6"
p384 = "0.13.0"
public-ip = "0.2.2"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["full"] }
walkdir = "2.4.0"
zip = "0.6.6"
